# cluster-monitoring

./: README.md  pyproject.toml  pythonanywhere_wsgi.py
devtools/conda_envs/: dash.yml
tempmon/: app.py  definitions.py
tempmon/components/: __init__.py  footer.py  login.py  navbar.py  plots.py
tempmon/pages/: home.py  page2.py
tempmon/pages/correlations/: comp1.py  layout.py  plots.py
tempmon/utils/: __init__.py  colors.py  geosphere.py  images.py  preprocess_data.py  settings.py
