[build-system]
requires = ["setuptools>=61", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tempmon"
authors = [
    {name = "Florian Jörg"},
    {name = "Johannes Karwounopoulos"},
    {name = "András Szabadi"}
]
description = "Monitoring of our clusters"
readme = "README.md"
requires-python = ">=3.10"
keywords = []
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "dash >=2",
    "pandas",
    "dash-bootstrap-components",
]
dynamic = ["version"]

#[project.scripts]
#generate_dfs = "tempmon.utils.preprocess_data:generate_dfs"

[tool.setuptools]
packages = ["tempmon"]